--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.29.4",
     "bootstrap": "^5.1.3",
-    "next": "12.0.8",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "17.0.2",
